apps/immich/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-lb
spec:
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: immich
