apps/immich/base/ingress-external.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-secure
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`immich.mimotej.stream`)
      kind: Rule
      middlewares:
        - name: middleware-crowdsec
          namespace: traefik
        - name: middleware-geoblock
          namespace: traefik
      services:
        - name: immich-server
          port: http
  tls:
    secretName: immich-tls
