apps/immich/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`immich.internal`)
      kind: Rule
      services:
        - name: immich-server
          port: http
